# rauthy

./: .dockerignore  .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  rust-toolchain
.github/workflows/: docker-image.yml
scripts/: build-docker.sh
src/: config.rs  error.rs  main.rs
src/config/: auth_options.rs  command.rs  config.rs  mod.rs
src/proxy/: mod.rs  proxy_options.rs
src/server/: server.rs
