[package]
name = "Rauthy"
version = "0.2.2"
authors = ["Krakaw <41575888+Krakaw@users.noreply.github.com>"]
edition = "2018"

[[bin]]
name = "rauthy"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros", "fs"] }
warp = "0.2"
dotenv = "0.15.0"
base64 = "0.12.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.7.1"
log = "0.4.11"
clap = "3.0.0-beta.1"
